fix footer layout on mobile

--- a/src/Components/Home.module.css
+++ b/src/Components/Home.module.css
@@ -1,8 +1,3 @@
-.homeLayout {
-    padding-bottom: 0;
-    height: calc(100vh - 48px);
-}
-
 .logo {
     padding: 1rem;
     display: flex;
@@ -23,6 +18,8 @@
 
 @media (min-width: 768px) {
     .homeLayout {
+        padding-bottom: 0;
+        height: calc(100vh - 48px);
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
